kube/fedhr-new-django-deployment-local.yaml

# FEDHR-NEW DJANGO DEPLOYMENT ==============================================
apiVersion: apps/v1
kind: Deployment

metadata:
  name:  fedhr-new-django-deployment
  namespace: fedhr-new
  labels:
    app:  fedhr-new-django-deployment-label

spec:
  selector:
    matchLabels:
      app: fedhr-new-django-deployment-label

  replicas: 1

  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate

  template:
    metadata:
      labels:
        app:  fedhr-new-django-deployment-label

    spec:
      containers:
      - name:  fed-be-containr
        image:  fedhr-new-django-k8-image:latest #726725565829.dkr.ecr.us-east-1.amazonaws.com/fedhr-repo-backend:latest
        imagePullPolicy: IfNotPresent #Always
        command: ['python','manage.py', 'runserver', '0.0.0.0:8000']
        # resources:
        #   requests:
        #     cpu: "1"
        #     memory: 200Mi
        #   limits:
        #     cpu: "20"
        #     memory: 1Gi

        ports:
        - containerPort:  8000
          name:  fed-be-containr

      restartPolicy: Always

---
# FEDHR-NEW DJANGO SERVICE ==============================================
apiVersion: v1
kind: Service
metadata:
  name: fedhr-new-django-service
  namespace: fedhr-new
spec:
  selector:
    app: fedhr-new-django-deployment-label
  type: LoadBalancer
  ports:
  - protocol: TCP
    # this service will expose this port
    port: 8000
    # Port we're targeting on the pod container
    targetPort: 8000
