kube/fedhr-new-django-deployment-prod.yaml

# FEDHR-NEW DJANGO DEPLOYMENT PROD ==============================================
apiVersion: apps/v1
kind: Deployment

metadata:
  name:  fedhr-new-django-deployment
  namespace: fedhrnew
  labels:
    app:  fedhr-new-django-deployment-label

spec:
  selector:
    matchLabels:
      app: fedhr-new-django-deployment-label

  replicas: 2

  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate

  template:
    metadata:
      labels:
        app:  fedhr-new-django-deployment-label

    spec:
      containers:
      - name:  fed-be-containr
        image:  728474852849.dkr.ecr.us-east-1.amazonaws.com/fedhr-new-django-ecr-repo:dev-latest
        imagePullPolicy: Always #IfNotPresent
        command: ['python','manage.py', 'runserver', '0.0.0.0:8000']
        # resources:
        #   requests:
        #     cpu: "1"
        #     memory: 200Mi
        #   limits:
        #     cpu: "20"
        #     memory: 1Gi

        ports:
        - containerPort:  8000
          name:  fed-be-containr

      # restartPolicy: Always

---
# FEDHR-NEW DJANGO SERVICE PROD ==============================================
apiVersion: v1
kind: Service
metadata:
  name: fedhr-new-django-service
  namespace: fedhrnew
spec:
  selector:
    app: fedhr-new-django-deployment-label
  type: NodePort #LoadBalancer
  ports:
  - protocol: TCP
    # this service will expose this port
    port: 8000
    # Port we're targeting on the pod container
    targetPort: 8000
